--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,3 +2,55 @@
 .navbar {
     margin-bottom: 30px;
 }
+body{
+    font-family: sans-serif;
+}
+
+form{
+    width: 600px;
+    margin: 3rem auto;
+    border:1px solid #80bdff;
+    padding:2rem;
+
+}
+label{
+
+    display:block;
+    padding:1rem 0 .15rem;
+    text-transform: uppercase;
+    font-size: 14px;
+
+}
+
+
+input {
+    display: block;
+    text-transform: lowercase;
+    font-size: 14px;
+    width: 100%;
+}
+
+
+input, textarea {
+    display: block;
+    width: 100%;
+    border: 2px solid#9fcdff;
+    padding: .25rem;
+    font-size: 14px;
+}
+
+
+#subBtn{
+    border:0;
+    background:#0069d9;
+    padding: .5rem;
+    color:white;
+    margin: 1rem 0;
+    width:auto;
+    text-transform: uppercase;
+    cursor: pointer;
+
+
+}
+
+
