pushing latests changes

--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -6,12 +6,11 @@
 
 </head>
 <body>
-<!--<div><h2>Welcome [[${user.firstName}]] [[${user.lastName}]] </h2></div>-->
-</br>
 <div th:replace="base :: navlinks"></div>
 
 
-<h3>Title: <span th:text="${closet.closetName}"></span></h3> <br/>
+<h3 id="titlecloset">Title: <span th:text="${closet.closetName}"></span></h3> <br/>
+<h5 id="delcloset"><a th:href="@{/delete/{id}(id=${closet.id})}" class="btn btn-danger">Delete this closet</a></h5>
 <div class="container">
     <h4>Tops</h4>
     <table class="table table-bordered">
@@ -185,9 +184,7 @@
         </tbody>
     </table>
 </div>
-<h5><a th:href="@{/delete/{id}(id=${closet.id})}">Delete this closet</a></h5>
 
-</p>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
