--- a/src/main/resources/templates/userclosetform.html
+++ b/src/main/resources/templates/userclosetform.html
@@ -8,31 +8,41 @@
 <body>
 <div th:replace="base :: navlinks"></div>
 <div class="container">
-    <div class="col-3"></div>
-    <div class="col-6 pt-6">
-        <div>
-            <h3 id="location"></h3>
-            <h3 id="temp" name="temp"></h3>
-            <label for="userlocation">Location: </label>
-            <input id="userlocation" type="text"/>
-            <input type="submit" value="Today's Weather" onclick="weatherBallon(document.getElementById('userlocation').value)"/>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-6 pt-6">
+            <div>
+                <div class="form-group">
+                    <h3 id="location"></h3>
+                    <h3 id="temp" name="temp"></h3>
+                </div>
+                <div class="form-group">
+                    <label for="userlocation">Location: </label>
+                    <input id="userlocation" type="text" class="form-control" placeholder="Rockville, USA"/>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Today's Weather" class="form-control"
+                           onclick="weatherBallon(document.getElementById('userlocation').value)"/>
+                </div>
+            </div>
+            <form action="#" th:action="@{/process}" th:object="${user}"
+                  method="post" enctype="multipart/form-data">
+                <input type="hidden" id="temperature" name="temperature"/>
+                <input type="hidden" th:field="*{id}"/>
+                <div class="form-group">
+                    <lable for="occasion">Occasion:</lable>
+                    <select id="occasion" name="occasion"/>
+                    <option value="formal">Formal</option>
+                    <option value="informal">Informal</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Submit"/>
+                </div>
+            </form>
         </div>
-        <form action="#" th:action="@{/process}" th:object="${user}"
-              method="post" enctype="multipart/form-data" >
-            <input type="hidden" id="temperature" name="temperature"/>
-            <input type="hidden" id="month" name="month"/>
-            <input type="hidden" th:field="*{id}"/>
-            <lable for="occasion">Occasion:</lable>
-            <select id="occasion" name="occasion" />
-            <option value="formal">Formal</option>
-            <option value="informal">Informal</option>
-            </select><br />
-
-            <input type="submit" value="Submit"/>
-        </form>
+        <div class="col-3"></div>
     </div>
-    <div class="col-3"></div>
-
 </div>
 <div th:replace="base :: weather"></div>
 <div th:replace="base :: bootstrap-js"></div>
