--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,6 +2,7 @@
 .navbar {
     margin-bottom: 30px;
 }
+
 body{
     font-family: sans-serif;
 }
@@ -9,7 +10,6 @@ body{
 form{
     width: 600px;
     margin: 3rem auto;
-    border:1px solid #80bdff;
     padding:2rem;
 
 }
@@ -34,7 +34,6 @@ input {
 input, textarea {
     display: block;
     width: 100%;
-    border: 2px solid#9fcdff;
     padding: .25rem;
     font-size: 14px;
 }
@@ -42,7 +41,7 @@ input, textarea {
 
 #subBtn{
     border:0;
-    background:#0069d9;
+    /*background:#0069d9;*/
     padding: .5rem;
     color:white;
     margin: 1rem 0;
@@ -51,6 +50,27 @@ input, textarea {
     cursor: pointer;
 
 
+}
+
+#login{
+    padding-top: 6%;
+    padding-left: 5%;
+    padding-bottom: 10%;
+}
+
+#delcloset{
+    float: right;
+    margin-right: 5em;
+}
+
+#titlecloset{
+    padding-left: 15px;
+}
+
+@media only screen and (max-width: 690px) {
+    #login-img{
+        display: none;
+    }
 }
 
 
