Dropdown menu functionality on all pages

--- a/src/main/resources/templates/packingitem.html
+++ b/src/main/resources/templates/packingitem.html
@@ -184,8 +184,7 @@
         <input type="submit" value="Submit" />
         </p>
     </form>
-
-
+    <div th:replace="base :: bootstrap-js"></div>
 </div>
 </body>
 </html>
