--- a/src/main/resources/templates/bottomform.html
+++ b/src/main/resources/templates/bottomform.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <!--<link rel="stylesheet" href="style.css">-->
     <th:block th:insert="base :: header"></th:block>
 </head>
 <body>
@@ -26,10 +26,6 @@
                         th:value="${closet.id}"
                         th:text="${closet.closetName}"></option>
             </select><br/>
-
-
-
-
             <label for="color">
                 Color:
             </label>
