--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -25,9 +25,9 @@
             <li class="nav-item" sec:authorize="isAnonymous()">
                 <a class="nav-link" href="/register">Register</a>
             </li>
-            <li class="nav-item" sec:authorize="isAnonymous()">
-                <a class="nav-link" href="/secure">Login</a>
-            </li>
+            <!--<li class="nav-item" sec:authorize="isAnonymous()">-->
+                <!--<a class="nav-link" href="/secure">Login</a>-->
+            <!--</li>-->
             <li class="nav-item" sec:authorize="isAuthenticated()">
                 <a class="nav-link" href="/">List My Closets</a>
             </li>
