--- a/src/main/resources/templates/bottomform.html
+++ b/src/main/resources/templates/bottomform.html
@@ -2,13 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Adding Bottom</title>
     <!--<link rel="stylesheet" href="style.css">-->
     <th:block th:insert="base :: header"></th:block>
 </head>
 <body>
 <div th:replace="base :: navlinks"></div>
 <div class="container">
+    <h2 class="mt-5 justify-content-center">Adding New Bottom</h2>
     <form action="#"
           th:action="@{/processbottom}"
           th:object="${bottom}"
@@ -72,7 +73,7 @@
                 <img th:src ="*{imgUrl}" />
                 <hr />
             </div>
-            <input type="submit" value="Submit" id="subBtn"/>
+            <input class="btn btn-secondary" type="submit" value="Submit"/>
         </form>
     </form>
 </div>
