--- a/src/main/resources/templates/footwearform.html
+++ b/src/main/resources/templates/footwearform.html
@@ -13,6 +13,7 @@
 <div th:replace="base :: navlinks"></div>
 <div class="container">
 <!--<<<<<<< HEAD-->
+    <h2 class="mt-5 justify-content-center">Adding New Footwear</h2>
 <form action="#"
       th:action="@{/processfootwear}"
       th:object="${footwear}"
@@ -52,7 +53,7 @@
         <img th:src ="*{imgUrl}" />
         <hr />
     </div>
-    <input type="submit" value="Submit" />
+    <input class="btn btn-secondary" type="submit" value="Submit" />
     </p>
 </form>
 </div>
